{
  "version": 4,
  "terraform_version": "0.13.1",
  "serial": 125,
  "lineage": "47790601-e6d5-2422-60aa-98752272e033",
  "resources": [
    {
      "module": "module.compute[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "SgInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a887e401f7654935",
            "arn": "arn:aws:ec2:us-east-1:463583571492:instance/i-0d6bfd59da97f753d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d6bfd59da97f753d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mounika",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-024825999e18b0de2",
            "private_dns": "ip-192-30-10-196.ec2.internal",
            "private_ip": "192.30.10.196",
            "public_ip": "34.205.246.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-058a9eefae8264fa3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ab8845ab494b616",
            "tags": {
              "Name": "mounika 0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-079bc7e360119cea8"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.mysg",
            "module.network.aws_subnet.subnet",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "SgInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a887e401f7654935",
            "arn": "arn:aws:ec2:us-east-1:463583571492:instance/i-0475f5898371fbfbd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0475f5898371fbfbd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mounika",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01167619ea148eee9",
            "private_dns": "ip-192-30-10-158.ec2.internal",
            "private_ip": "192.30.10.158",
            "public_ip": "3.235.49.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06d41fad19c5fe1a4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ab8845ab494b616",
            "tags": {
              "Name": "mounika 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-079bc7e360119cea8"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.mysg",
            "module.network.aws_subnet.subnet",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute[2]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "SgInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a887e401f7654935",
            "arn": "arn:aws:ec2:us-east-1:463583571492:instance/i-0769a343274e10221",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0769a343274e10221",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mounika",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e93d0387fea640c3",
            "private_dns": "ip-192-30-10-237.ec2.internal",
            "private_ip": "192.30.10.237",
            "public_ip": "100.24.121.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e38b092c1f3fae25",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ab8845ab494b616",
            "tags": {
              "Name": "mounika 2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-079bc7e360119cea8"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.mysg",
            "module.network.aws_subnet.subnet",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute[3]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "SgInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a887e401f7654935",
            "arn": "arn:aws:ec2:us-east-1:463583571492:instance/i-0eaa8ed67380d15cd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eaa8ed67380d15cd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mounika",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0156c3e82f59b5b52",
            "private_dns": "ip-192-30-10-141.ec2.internal",
            "private_ip": "192.30.10.141",
            "public_ip": "3.215.180.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0523fc3668a37af80",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ab8845ab494b616",
            "tags": {
              "Name": "mounika 3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-079bc7e360119cea8"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.mysg",
            "module.network.aws_subnet.subnet",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:463583571492:internet-gateway/igw-07baf1fac74d93c57",
            "id": "igw-07baf1fac74d93c57",
            "owner_id": "463583571492",
            "tags": {
              "Name": "mounika-igw"
            },
            "vpc_id": "vpc-04659e231221960c8"
          },
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a3f8f1d2c019f636",
            "owner_id": "463583571492",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07baf1fac74d93c57",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mounika_route"
            },
            "vpc_id": "vpc-04659e231221960c8"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myrouteassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3a463cabd073207",
            "route_table_id": "rtb-0a3f8f1d2c019f636",
            "subnet_id": "subnet-08ab8845ab494b616"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.route",
            "module.network.aws_subnet.subnet",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:463583571492:security-group/sg-079bc7e360119cea8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079bc7e360119cea8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20200827061140740100000001",
            "name_prefix": "",
            "owner_id": "463583571492",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mounikasg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04659e231221960c8"
          },
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:463583571492:subnet/subnet-08ab8845ab494b616",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.30.10.0/24",
            "id": "subnet-08ab8845ab494b616",
            "map_public_ip_on_launch": true,
            "owner_id": "463583571492",
            "tags": {
              "Name": "mounika-route"
            },
            "vpc_id": "vpc-04659e231221960c8"
          },
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:463583571492:vpc/vpc-04659e231221960c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.30.0.0/16",
            "default_network_acl_id": "acl-090768b367d83e7cf",
            "default_route_table_id": "rtb-02e71f7b239c5259e",
            "default_security_group_id": "sg-09d5158082c28f4ac",
            "dhcp_options_id": "dopt-449e073e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04659e231221960c8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02e71f7b239c5259e",
            "owner_id": "463583571492",
            "tags": {
              "Name": "mounia-vpc"
            }
          }
        }
      ]
    }
  ]
}